// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout Component renders correctly 1`] = `
<div
  className="layout "
>
  <div
    className="ui container"
  >
    <div
      className="layout__app-name-wrapper"
    >
      <a
        className="layout__app-name"
        data-highlightword="Casablanca"
        href="/"
        onClick={[Function]}
      >
        Casablanca racing
      </a>
    </div>
    <div
      className="ui main-menu layout__main-menu menu"
    >
      <a
        className="item main-menu__item"
        onClick={[Function]}
      >
        Главная
      </a>
      <a
        className="item main-menu__item"
        onClick={[Function]}
      >
        Профиль
      </a>
      <a
        className="item main-menu__item"
        onClick={[Function]}
      >
        Форум
      </a>
      <div
        className="right menu"
      >
        <a
          className="item main-menu__item"
          onClick={[Function]}
        >
          Войти
        </a>
        <a
          className="item main-menu__item"
          onClick={[Function]}
        >
          Зарегистрироваться
        </a>
      </div>
    </div>
    <div
      className="layout__main main "
    >
      <div>
        Hello world
      </div>
    </div>
  </div>
</div>
`;

exports[`Layout Component renders correctly with all props 1`] = `
<div
  className="layout class-name"
>
  <div
    className="ui container layout__container_valign"
  >
    <div
      className="layout__app-name-wrapper"
    >
      <a
        className="layout__app-name"
        data-highlightword="Casablanca"
        href="/"
        onClick={[Function]}
      >
        Casablanca racing
      </a>
    </div>
    <div
      className="ui main-menu layout__main-menu menu"
    >
      <a
        className="item main-menu__item"
        onClick={[Function]}
      >
        Главная
      </a>
      <a
        className="item main-menu__item"
        onClick={[Function]}
      >
        Профиль
      </a>
      <a
        className="item main-menu__item"
        onClick={[Function]}
      >
        Форум
      </a>
      <div
        className="right menu"
      >
        <a
          className="item main-menu__item"
          onClick={[Function]}
        >
          Войти
        </a>
        <a
          className="item main-menu__item"
          onClick={[Function]}
        >
          Зарегистрироваться
        </a>
      </div>
    </div>
    <h1
      className="ui header layout__header"
    >
      Title
    </h1>
    <div
      className="layout__main main main_transparent"
    >
      <div>
        Hello world
      </div>
    </div>
  </div>
</div>
`;

exports[`Layout Component renders correctly with some props 1`] = `
<div
  className="layout "
>
  <div
    className="ui container"
  >
    <div
      className="layout__app-name-wrapper"
    >
      <a
        className="layout__app-name"
        data-highlightword="Casablanca"
        href="/"
        onClick={[Function]}
      >
        Casablanca racing
      </a>
    </div>
    <div
      className="ui main-menu layout__main-menu menu"
    >
      <a
        className="item main-menu__item"
        onClick={[Function]}
      >
        Главная
      </a>
      <a
        className="item main-menu__item"
        onClick={[Function]}
      >
        Профиль
      </a>
      <a
        className="item main-menu__item"
        onClick={[Function]}
      >
        Форум
      </a>
      <div
        className="right menu"
      >
        <a
          className="item main-menu__item"
          onClick={[Function]}
        >
          Войти
        </a>
        <a
          className="item main-menu__item"
          onClick={[Function]}
        >
          Зарегистрироваться
        </a>
      </div>
    </div>
    <h1
      className="ui header layout__header"
    >
      Title
    </h1>
    <div
      className="layout__main main "
    >
      <div>
        Hello world
      </div>
    </div>
  </div>
</div>
`;

exports[`Layout Component renders correctly with title prop 1`] = `
<div
  className="layout "
>
  <div
    className="ui container"
  >
    <div
      className="layout__app-name-wrapper"
    >
      <a
        className="layout__app-name"
        data-highlightword="Casablanca"
        href="/"
        onClick={[Function]}
      >
        Casablanca racing
      </a>
    </div>
    <div
      className="ui main-menu layout__main-menu menu"
    >
      <a
        className="item main-menu__item"
        onClick={[Function]}
      >
        Главная
      </a>
      <a
        className="item main-menu__item"
        onClick={[Function]}
      >
        Профиль
      </a>
      <a
        className="item main-menu__item"
        onClick={[Function]}
      >
        Форум
      </a>
      <div
        className="right menu"
      >
        <a
          className="item main-menu__item"
          onClick={[Function]}
        >
          Войти
        </a>
        <a
          className="item main-menu__item"
          onClick={[Function]}
        >
          Зарегистрироваться
        </a>
      </div>
    </div>
    <h1
      className="ui header layout__header"
    >
      Title
    </h1>
    <div
      className="layout__main main "
    >
      <div>
        Hello world
      </div>
    </div>
  </div>
</div>
`;
